--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   "author": "twinh <twinhuang@qq.com>",
   "homepage": "https://github.com/twinh/gitsync#readme",
   "license": "MIT",
-  "main": "index.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
+  "main": "dist/index.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -26,7 +22,10 @@
     "url": "git+https://github.com/twinh/gitsync.git"
   },
   "scripts": {
-    "test": "jest"
+    "build": "tsc",
+    "clean": "rimraf dist coverage",
+    "test": "jest",
+    "prepare": "yarn build"
   },
   "bugs": {
     "url": "https://github.com/twinh/gitsync/issues"
