--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "https://github.com/twinh/gitsync/issues"
   },
   "dependencies": {
+    "@gitsync/commit-command": "^0.1.4",
     "@gitsync/sync": "^0.1.4"
   },
   "devDependencies": {
