--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
+  },
+  "ciDependencies": {
+    "@gitsync/commit-command": "gitsync-pkg/gitsync-commit-command#master",
+    "@gitsync/sync": "gitsync-pkg/gitsync-sync#master",
+    "@gitsync/test": "gitsync-pkg/gitsync-test#master"
   }
 }
