--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "ciDependencies": {
     "@gitsync/commit-command": "gitsync-pkg/gitsync-commit-command#master",
     "@gitsync/sync": "gitsync-pkg/gitsync-sync#master",
-    "@gitsync/test": "gitsync-pkg/gitsync-test#master"
+    "@gitsync/test": "gitsync-pkg/gitsync-test#master",
+    "@gitsync/config": "gitsync-pkg/gitsync-config#master"
   }
 }
