--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "typescript": "^3.5.3"
   },
   "ciDependencies": {
-    "@gitsync/commit-command": "gitsync-pkg/gitsync-commit-command#master",
-    "@gitsync/sync": "gitsync-pkg/gitsync-sync#master",
-    "@gitsync/test": "gitsync-pkg/gitsync-test#master",
-    "@gitsync/config": "gitsync-pkg/gitsync-config#master"
+    "@gitsync/commit-command": "gitsync-pkg/gitsync-commit-command",
+    "@gitsync/sync": "gitsync-pkg/gitsync-sync",
+    "@gitsync/test": "gitsync-pkg/gitsync-test",
+    "@gitsync/config": "gitsync-pkg/gitsync-config"
   }
 }
